refactor and merge changlogs